# Zyron

./: .gitignore  Cargo.toml  LICENSE  rust-toolchain.toml
binaries/zyrondb-cli/: Cargo.toml
binaries/zyrondb-cli/src/: color.rs  command.rs  command_help.rs  command_sql.rs  completion.rs  display.rs  history.rs  main.rs  meta.rs
crates/zyron-auth/: Cargo.toml
crates/zyron-auth/src/: abac.rs  auth_rules.rs  aws_auth.rs  balloon.rs  breakglass.rs  brute_force.rs  cbor.rs  classification.rs  column_security.rs  context.rs  credential_provider.rs  credentials.rs  crypto_functions.rs  encryption.rs  external_credentials.rs  governance.rs  heap_storage.rs  ip_management.rs  k8s_auth.rs  lib.rs  masking.rs  mtls_pinning.rs  oauth2_client.rs  privilege.rs  rcu.rs  rls.rs  role.rs  row_ownership.rs  secret_providers.rs  security_label.rs  security_map.rs  session_binding.rs  snapshot.rs  storage.rs  tagging.rs  user.rs  webauthn.rs  webauthn_store.rs  webhook.rs
crates/zyron-auth/tests/: auth_bench.rs
crates/zyron-catalog/: Cargo.toml
crates/zyron-catalog/src/: cache.rs  catalog.rs  encoding.rs  ids.rs  lib.rs  resolver.rs  schema.rs  stats.rs  storage.rs
crates/zyron-catalog/tests/: catalog_bench.rs  phase3_test.rs
crates/zyron-cdc/: Cargo.toml
crates/zyron-cdc/src/: cdc_ingest.rs  cdc_stream.rs  change_feed.rs  decoder.rs  lib.rs  metrics.rs  publication.rs  replication_slot.rs  retention.rs  returning.rs  snapshot.rs
crates/zyron-cdc/tests/: cdc_bench.rs
crates/zyron-executor/: Cargo.toml
crates/zyron-executor/src/: batch.rs  column.rs  compute.rs  context.rs  executor.rs  expr.rs  lib.rs  types_bridge.rs
crates/zyron-executor/src/operator/: aggregate.rs  distinct.rs  filter.rs  fts_scan.rs  graph_scan.rs  join.rs  limit.rs  mod.rs  modify.rs  project.rs  scan.rs  setop.rs  sort.rs  spatial_scan.rs  vector_scan.rs  window.rs
crates/zyron-executor/tests/: executor_bench.rs  phase5_test.rs
crates/zyron-pipeline/: Cargo.toml
crates/zyron-pipeline/src/: aggregate.rs  dependency.rs  event_handler.rs  ids.rs  lib.rs  lineage.rs  materialized_view.rs  mv_advisor.rs  pipeline.rs  quality.rs  quality_drift.rs  refresh.rs  schedule.rs  sla.rs  storage.rs  stored_procedure.rs  trigger.rs  trigger_trace.rs  udf.rs  watermark.rs
crates/zyron-pipeline/tests/: pipeline_bench.rs
crates/zyron-planner/: Cargo.toml
crates/zyron-planner/src/: binder.rs  cost.rs  explain.rs  lib.rs
crates/zyron-planner/src/logical/: builder.rs  mod.rs
crates/zyron-planner/src/optimizer/: cardinality.rs  mod.rs
crates/zyron-planner/src/physical/: builder.rs  mod.rs
crates/zyron-planner/src/statistics/: collector.rs  histogram.rs  hyperloglog.rs  mod.rs
crates/zyron-planner/tests/: optimizer_bench.rs  phase4_test.rs  planner_bench.rs
crates/zyron-search/: Cargo.toml
crates/zyron-search/src/: lib.rs
crates/zyron-search/src/graph/: algorithms.rs  manager.rs  mod.rs  query.rs  schema.rs  storage.rs
crates/zyron-search/src/text/: analyzer.rs  autocomplete.rs  highlight.rs  inverted_index.rs  manager.rs  mod.rs  query.rs  scoring.rs  synonym.rs
crates/zyron-search/src/vector/: ann_index.rs  distance.rs  hybrid.rs  manager.rs  memory.rs  mod.rs  profile.rs  quantized_index.rs  types.rs
crates/zyron-search/tests/: search_bench.rs
crates/zyron-server/: Cargo.toml
crates/zyron-server/src/: auth_storage.rs  backup.rs  config.rs  health.rs  hooks.rs  io_stats.rs  lib.rs  metrics.rs  session.rs  signal.rs
crates/zyron-server/src/background/: cdc_writer.rs  checkpoint.rs  credential_refresh.rs  dead_subscriber_reaper.rs  dlq_ttl.rs  host_health.rs  mod.rs  mv_refresh.rs  publication_retention.rs  stats.rs  stream_monitor.rs  vacuum.rs  wal_archiver.rs
crates/zyron-server/tests/: admin_exec_bench.rs  config_management_bench.rs  server_bench.rs
crates/zyron-storage/: Cargo.toml
crates/zyron-storage/src/: btree.rs  checkpoint.rs  checkpoint_coordinator.rs  disk.rs  freespace.rs  heap.rs  lib.rs  tuple.rs
crates/zyron-storage/tests/: checkpoint_profile.rs  columnar_bench.rs  encoding_bench.rs  phase1_test.rs  storage_bench.rs  transaction_bench.rs
crates/zyron-streaming/: Cargo.toml
crates/zyron-streaming/src/: accumulator.rs  agg_runner.rs  backpressure.rs  checkpoint.rs  column.rs  copy_external.rs  dlq.rs  external_sink.rs  external_source.rs  hash.rs  interval_join_runner.rs  job.rs  job_runner.rs  late_data.rs  lib.rs  metrics.rs  record.rs  retry.rs  row_codec.rs  sink_connector.rs  source_connector.rs  spsc.rs  state.rs  stream_join.rs  stream_operator.rs  upsert_sink.rs  watermark.rs  window.rs  window_state.rs
crates/zyron-streaming/tests/: streaming_bench.rs
crates/zyron-types/: Cargo.toml
crates/zyron-types/src/: bitfield.rs  business_time.rs  color.rs  cron.rs  crypto.rs  data_quality.rs  diff.rs  encoding.rs  entity_resolution.rs  financial.rs  fingerprint.rs  formatting.rs  fuzzy.rs  geospatial.rs  hierarchy.rs  id_gen.rs  identifier.rs  json_schema.rs  lib.rs  matrix.rs  money.rs  network.rs  probabilistic.rs  quantity.rs  range.rs  rate_limit.rs  rating.rs  regex_type.rs  registry.rs  semver.rs  similarity.rs  spatial_index.rs  state_machine.rs  statistics.rs  string_ops.rs  timeseries.rs  url_type.rs
crates/zyron-types/tests/: spatial_index_bench.rs  types_bench.rs
crates/zyron-versioning/: Cargo.toml
crates/zyron-versioning/src/: branch.rs  diff.rs  lib.rs  page_version_map.rs  scd.rs  snapshot.rs  temporal.rs  version.rs
crates/zyron-versioning/tests/: versioning_bench.rs
crates/zyron-wal/: Cargo.toml
crates/zyron-wal/src/: checksum.rs  constants.rs  lib.rs  reader.rs  record.rs  ring_buffer.rs  segment.rs  sequencer.rs  writer.rs
crates/zyron-wire/: Cargo.toml
crates/zyron-wire/src/: auth.rs  codec.rs  connection.rs  copy.rs  copy_external_dispatch.rs  ddl_dispatch.rs  endpoint_registrar.rs  lib.rs  notifications.rs  pem.rs  pg_client.rs  pool.rs  quic.rs  session.rs  stat_views.rs  subscription.rs  tls.rs  transport.rs  types.rs  uri.rs  zyron_sink.rs  zyron_source.rs
crates/zyron-wire/tests/: phase6_test.rs  wire_bench.rs
(+276 files in other folders)
