[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
edition = "2024"
rust-version = "1.94"

[workspace.dependencies]
# Async runtime and transport
tokio = { version = "1.49", features = ["full"] }
tokio-quiche = "0.12"
async-trait = "0.1.89"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
bincode = "2.0"

# Data structures
bytes = { version = "1.11", features = ["serde"] }
hashbrown = "0.16"
crossbeam = "0.8.4"
parking_lot = "0.12.5"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# Compression
lz4_flex = "0.12"
zstd = "0.13.3"

# Checksums
crc32fast = "1.5"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

# System info
sysinfo = "0.37"

# Arrow ecosystem
arrow = "57"
parquet = "57"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
