[workspace]
resolver = "2"
members = ["crates/*", "binaries/*"]

[workspace.package]
edition = "2024"
rust-version = "1.94"

[workspace.dependencies]
# Async runtime and transport
tokio = { version = "1.50.0", features = ["full"] }
tokio-quiche = "0.16.1"
async-trait = "0.1.89"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }

# Memory allocator
mimalloc = "0.1"

# Data structures
bytes = { version = "1.11.1", features = ["serde"] }
hashbrown = "0.16.1"
crossbeam = "0.8.4"
parking_lot = "0.12.5"
scc = "3.6.10"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Logging
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

# Checksums
crc32fast = "1.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

# System info
sysinfo = "0.38.4"

# Networking
socket2 = "0.6"

# Wire protocol
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
md-5 = "0.10"
sha1 = "0.10"
sha2 = { version = "0.10", features = ["compress"] }
hmac = "0.12"
pbkdf2 = "0.12"
base64 = "0.22"
rand = "0.10"
itoa = "1"
ryu = "1"

# Arrow ecosystem
arrow = "58.0.0"
parquet = "58.0.0"

# Config
toml = "0.8"

# Testing
rcgen = "0.13"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
