[package]
name = "zyrondb-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "zyrondb-cli"
path = "src/main.rs"

[dependencies]
zyron-wire = { path = "../../crates/zyron-wire" }
zyron-common = { path = "../../crates/zyron-common" }
tokio.workspace = true
bytes.workspace = true
