[package]
name = "zyron-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
zyron-common = { path = "../zyron-common" }
zyron-catalog = { path = "../zyron-catalog" }
zyron-storage = { path = "../zyron-storage" }
zyron-buffer = { path = "../zyron-buffer" }
zyron-wal = { path = "../zyron-wal" }
scc.workspace = true
sha2.workspace = true
sha1.workspace = true
hmac.workspace = true
base64.workspace = true
rand.workspace = true
serde.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
p256.workspace = true
ed25519-dalek.workspace = true

[dev-dependencies]
tempfile = "3"
mimalloc.workspace = true
zyron-bench-harness = { path = "../zyron-bench-harness" }
