[package]
name = "zyron-cdc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
zyron-common = { path = "../zyron-common" }
zyron-wal = { path = "../zyron-wal" }
zyron-storage = { path = "../zyron-storage" }
zyron-catalog = { path = "../zyron-catalog" }
zyron-buffer = { path = "../zyron-buffer" }
tokio = { workspace = true }
parking_lot = { workspace = true }
scc = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
zyron-bench-harness = { path = "../zyron-bench-harness" }
