[package]
name = "zyron-planner"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
zyron-common = { path = "../zyron-common" }
zyron-parser = { path = "../zyron-parser" }
zyron-catalog = { path = "../zyron-catalog" }
zyron-types = { path = "../zyron-types" }
tokio.workspace = true

[dev-dependencies]
zyron-buffer = { path = "../zyron-buffer" }
zyron-storage = { path = "../zyron-storage" }
zyron-wal = { path = "../zyron-wal" }
tempfile = "3.27.0"
zyron-bench-harness = { path = "../zyron-bench-harness" }
