[package]
name = "zyron-search"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
zyron-common = { path = "../zyron-common" }
parking_lot.workspace = true
scc.workspace = true
serde.workspace = true

[dev-dependencies]
zyron-bench-harness = { path = "../zyron-bench-harness" }
