[package]
name = "zyron-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
zyron-common = { path = "../zyron-common" }
zyron-buffer = { path = "../zyron-buffer" }
zyron-wal = { path = "../zyron-wal" }
zyron-storage = { path = "../zyron-storage" }
zyron-catalog = { path = "../zyron-catalog" }
zyron-wire = { path = "../zyron-wire" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
scc.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile = "3"
zyron-bench-harness = { path = "../zyron-bench-harness" }
