[package]
name = "zyron-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
zyron-common = { path = "../zyron-common" }
zyron-buffer = { path = "../zyron-buffer" }
zyron-wal = { path = "../zyron-wal" }
zyron-storage = { path = "../zyron-storage" }
zyron-catalog = { path = "../zyron-catalog" }
zyron-wire = { path = "../zyron-wire" }
zyron-auth = { path = "../zyron-auth" }
zyron-cdc = { path = "../zyron-cdc" }
zyron-pipeline = { path = "../zyron-pipeline" }
zyron-streaming = { path = "../zyron-streaming" }
zyron-versioning = { path = "../zyron-versioning" }
zyron-executor = { path = "../zyron-executor" }
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
scc.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile = "3"
zyron-bench-harness = { path = "../zyron-bench-harness" }
zyron-parser = { path = "../zyron-parser" }
zyron-wire = { path = "../zyron-wire" }
zyron-wal = { path = "../zyron-wal" }
