[package]
name = "zyron-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
zyron-common = { path = "../zyron-common" }
zyron-buffer = { path = "../zyron-buffer" }
tokio.workspace = true
parking_lot.workspace = true
bytes.workspace = true
crc32fast.workspace = true
hashbrown.workspace = true

[dev-dependencies]
tempfile = "3.24.0"
zyron-wal = { path = "../zyron-wal" }
rand = "0.9.1"
