[package]
name = "zyron-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
zyron-common = { path = "../zyron-common" }
zyron-buffer = { path = "../zyron-buffer" }
zyron-wal = { path = "../zyron-wal" }
tokio.workspace = true
parking_lot.workspace = true
bytes.workspace = true
hashbrown.workspace = true
scc.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
tempfile = "3.24.0"
rand = "0.9.1"
zyron-bench-harness = { path = "../zyron-bench-harness" }
