[package]
name = "zyron-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
zyron-common = { path = "../zyron-common" }
rand.workspace = true
sha2.workspace = true
xxhash-rust.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
zyron-bench-harness = { path = "../zyron-bench-harness" }
